--- a/Agora_Unity_WebGL.csproj
+++ b/Agora_Unity_WebGL.csproj
@@ -268,6 +268,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\AgoraEngine\Demo\AudioVideoStateControl.cs" />
     <Compile Include="Assets\AgoraEngine\Demo\ButtonHandler.cs" />
     <Compile Include="Assets\AgoraEngine\Demo\TestHelloUnityVideo.cs" />
     <Compile Include="Assets\AgoraEngine\Demo\TestHome.cs" />
