--- a/Agora_Unity_WebGL.csproj
+++ b/Agora_Unity_WebGL.csproj
@@ -297,6 +297,7 @@
     <Compile Include="Assets\AgoraEngine\Utils\TokenClient.cs" />
     <Compile Include="Assets\AgoraEngine\Utils\TokenRequestHelper.cs" />
     <Compile Include="Assets\API-Example\app-screenshare-sample\AgoraScreenShare.cs" />
+    <Compile Include="Assets\API-Example\datastream-sample\TestDataStream.cs" />
     <Compile Include="Assets\API-Example\desktop-screenshare-sample\WebScreenShare.cs" />
     <Compile Include="Assets\API-Example\geo-area-sample\HelloVideoAgora2.cs" />
     <Compile Include="Assets\API-Example\multi-channel-sample\Scripts\AgoraChannelPanel.cs" />
