Screen Sharing Callbacks
Screen Sharing Callbacks for main engine and agora channel.

--- a/Agora_Unity_WebGL.csproj
+++ b/Agora_Unity_WebGL.csproj
@@ -302,8 +302,8 @@
     <Compile Include="Assets\API-Example\tools\ToggleStateButton.cs" />
     <Compile Include="Assets\API-Example\tools\UIElementDragger.cs" />
     <Compile Include="Assets\API-Example\video-encoder-configuration\video_encoder_configuration.cs" />
-    <Compile Include="Assets\FunctionalTest\JoinMultipleChannel 1\AgoraMultiChannel2.cs" />
     <Compile Include="Assets\FunctionalTest\JoinMultipleChannel\AgoraMultiChannel.cs" />
+    <Compile Include="Assets\FunctionalTest\NewScreenShareMChannel\AgoraMultiChannel2.cs" />
     <Compile Include="Assets\FunctionalTest\Respawn\TestVideoRespawn.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
