fixes to audio muting error
audio muting error has been fixed. Local Clients can mute remote clients and remote clients can't undo muting on other users end until the local user unmutes remote clients.

--- a/Agora_Unity_WebGL.csproj
+++ b/Agora_Unity_WebGL.csproj
@@ -295,6 +295,7 @@
     <Compile Include="Assets\API-Example\desktop-screenshare-sample\WebScreenShare.cs" />
     <Compile Include="Assets\API-Example\geo-area-sample\HelloVideoAgora2.cs" />
     <Compile Include="Assets\API-Example\multi-channel-sample\Scripts\AgoraChannelPanel.cs" />
+    <Compile Include="Assets\API-Example\multi-channel-sample\Scripts\AgoraChannelPanelNew.cs" />
     <Compile Include="Assets\API-Example\multi-channel-sample\Scripts\MultiChannelSceneCtrl.cs" />
     <Compile Include="Assets\API-Example\rtmp-streaming-sample\RtmpStreaming.cs" />
     <Compile Include="Assets\API-Example\tools\Logger.cs" />
