--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -90,6 +90,8 @@
      <Compile Include="Assets\API-Example\multi-channel-sample\Scripts\AgoraChannelPanelNew.cs" />
      <Compile Include="Assets\API-Example\multi-channel-sample\Scripts\MultiChannelSceneCtrl.cs" />
      <Compile Include="Assets\API-Example\rtmp-streaming-sample\RtmpStreaming.cs" />
+     <Compile Include="Assets\API-Example\SpatialAudioForClientManager\SpatialAudioForClientManager.cs" />
+     <Compile Include="Assets\API-Example\SpatialAudioForMultichannel\SpatialAudioforMultichannel.cs" />
      <Compile Include="Assets\API-Example\tools\Logger.cs" />
      <Compile Include="Assets\API-Example\tools\PermissionHelper.cs" />
      <Compile Include="Assets\API-Example\tools\ToggleStateButton.cs" />
@@ -126,7 +128,6 @@
      <Compile Include="Assets\FunctionalTest\NewScreenShareClientManager\AgoraClientManager.cs" />
      <Compile Include="Assets\FunctionalTest\NewScreenShareMChannel\AgoraMultiChannel2.cs" />
      <Compile Include="Assets\FunctionalTest\Respawn\TestVideoRespawn.cs" />
-     <Compile Include="Assets\SpatialAudioForClientManager.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
