--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -55,30 +55,28 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\API-Example\DeviceManager\AgoraDeviceManager.cs" />
      <Compile Include="Assets\API-Example\Home Menu\Drag.cs" />
      <Compile Include="Assets\API-Example\Home Menu\RootMenu.cs" />
      <Compile Include="Assets\API-Example\Home Menu\RootMenuControl.cs" />
      <Compile Include="Assets\API-Example\Home Menu\RootMenuPanel.cs" />
-     <Compile Include="Assets\API-Example\SpatialAudioForClientManager\SpatialAudioForClientManager.cs" />
-     <Compile Include="Assets\API-Example\SpatialAudioForMultichannel\SpatialAudioforMultichannel.cs" />
-     <Compile Include="Assets\API-Example\VirtualBackgroundClientManager\VirtualBackgroundClientDemo.cs" />
-     <Compile Include="Assets\API-Example\VirtualBackgroundMultichannel\VirtualBackgroundMultichannelDemo.cs" />
      <Compile Include="Assets\API-Example\_AppIDInfo\AppInfoObject.cs" />
-     <Compile Include="Assets\API-Example\app-screenshare-sample\AgoraScreenShare.cs" />
      <Compile Include="Assets\API-Example\datastream-sample\TestDataStream.cs" />
-     <Compile Include="Assets\API-Example\desktop-screenshare-sample\WebScreenShare.cs" />
+     <Compile Include="Assets\API-Example\device-manager\AgoraDeviceManager.cs" />
      <Compile Include="Assets\API-Example\geo-area-sample\HelloVideoAgora2.cs" />
-     <Compile Include="Assets\API-Example\multi-channel-sample\Scripts\AgoraChannelPanel.cs" />
-     <Compile Include="Assets\API-Example\multi-channel-sample\Scripts\AgoraChannelPanelNew.cs" />
-     <Compile Include="Assets\API-Example\multi-channel-sample\Scripts\MultiChannelSceneCtrl.cs" />
-     <Compile Include="Assets\API-Example\rtmp-streaming-sample\RtmpStreaming.cs" />
-     <Compile Include="Assets\API-Example\token-usage-sample\ClientManagerTokenUse.cs" />
+     <Compile Include="Assets\API-Example\multi-channel\Scripts\AgoraChannelPanel.cs" />
+     <Compile Include="Assets\API-Example\multi-channel\Scripts\AgoraChannelPanelNew.cs" />
+     <Compile Include="Assets\API-Example\multi-channel\Scripts\MultiChannelSceneCtrl.cs" />
+     <Compile Include="Assets\API-Example\push-video-frame\AgoraScreenShare.cs" />
+     <Compile Include="Assets\API-Example\rtmp-streaming\RtmpStreaming.cs" />
+     <Compile Include="Assets\API-Example\screen-sharing\AgoraScreenSharingClientManager.cs" />
+     <Compile Include="Assets\API-Example\spatial-audio-effect\SpatialAudioForClientManager.cs" />
+     <Compile Include="Assets\API-Example\token-usage\ClientManagerTokenUse.cs" />
      <Compile Include="Assets\API-Example\tools\Logger.cs" />
      <Compile Include="Assets\API-Example\tools\PermissionHelper.cs" />
      <Compile Include="Assets\API-Example\tools\ToggleStateButton.cs" />
      <Compile Include="Assets\API-Example\tools\UIElementDragger.cs" />
      <Compile Include="Assets\API-Example\video-encoder-configuration\video_encoder_configuration.cs" />
+     <Compile Include="Assets\API-Example\virtual-background\VirtualBackgroundClientDemo.cs" />
      <Compile Include="Assets\AgoraEngine\Demo\AudioVideoStateControl.cs" />
      <Compile Include="Assets\AgoraEngine\Demo\ButtonHandler.cs" />
      <Compile Include="Assets\AgoraEngine\Demo\TestHelloUnityVideo.cs" />
@@ -141,33 +139,11 @@
      <Compile Include="Assets\FunctionalTest\DevDemo\Web\ImplTesterBeforeJoin.cs" />
      <Compile Include="Assets\FunctionalTest\DevDemo\Web\TestApiImplementor.cs" />
      <Compile Include="Assets\FunctionalTest\JoinMultipleChannel\AgoraMultiChannel.cs" />
-     <Compile Include="Assets\FunctionalTest\NewScreenShareClientManager\AgoraClientManager.cs" />
      <Compile Include="Assets\FunctionalTest\NewScreenShareMChannel\AgoraMultiChannel2.cs" />
      <Compile Include="Assets\FunctionalTest\Respawn\TestVideoRespawn.cs" />
-     <Compile Include="Assets\Prefabs\ColorChanger.cs" />
-     <Compile Include="Assets\Prefabs\ScreenScaler.cs" />
-     <None Include="Assets\AgoraEngine\Plugins\iOS\AgoraRtcKit.framework\Headers\AgoraMediaIO.h" />
-     <None Include="Assets\AgoraEngine\Plugins\iOS\AgoraRtcKit.framework\Headers\AgoraRtcEngineKit.h" />
-     <None Include="Assets\AgoraEngine\Plugins\iOS\AgoraRtcKit.framework\Headers\AgoraRtcChannel.h" />
+     <Compile Include="Assets\FunctionalTest\SpatialAudioForMultichannel\SpatialAudioforMultichannel.cs" />
+     <Compile Include="Assets\FunctionalTest\VirtualBackgroundMultichannel\VirtualBackgroundMultichannelDemo.cs" />
      <None Include="Assets\AgoraEngine\Plugins\Android\AgoraRtcEngineKit.plugin\AndroidManifest.xml" />
-     <None Include="Assets\AgoraEngine\Plugins\iOS\AgoraRtcKit.framework\Headers\AgoraVideoFrame.h" />
-     <None Include="Assets\AgoraEngine\Plugins\iOS\AgoraRtcKit.framework\Headers\AgoraSpatialAudioKit.h" />
-     <None Include="Assets\AgoraEngine\Plugins\iOS\AgoraRtcKit.framework\Headers\IAgoraRtcEngine.h" />
-     <None Include="Assets\AgoraEngine\Plugins\iOS\AgoraRtcKit.framework\Headers\IAgoraRtcChannel.h" />
-     <None Include="Assets\AgoraEngine\Plugins\iOS\AgoraRtcKit.framework\Headers\AgoraObjects.h" />
-     <None Include="Assets\AgoraEngine\Plugins\iOS\AgoraRtcKit.framework\Headers\IAgoraSpatialAudio.h" />
-     <None Include="Assets\AgoraEngine\Plugins\iOS\AgoraRtcKit.framework\Headers\IAgoraLog.h" />
-     <None Include="Assets\AgoraEngine\Plugins\iOS\AgoraRtcKit.framework\Headers\AgoraLogWriter.h" />
-     <None Include="Assets\AgoraEngine\Plugins\iOS\AgoraRtcKit.framework\Headers\AgoraAudioFrame.h" />
-     <None Include="Assets\AgoraEngine\Plugins\iOS\AgoraRtcKit.framework\Headers\IAgoraService.h" />
-     <None Include="Assets\AgoraEngine\Plugins\iOS\AgoraRtcKit.framework\Headers\AgoraBase.h" />
-     <None Include="Assets\AgoraEngine\Plugins\iOS\AgoraReplayKitExtension.framework\Headers\AgoraReplayKitHandler.h" />
-     <None Include="Assets\AgoraEngine\Plugins\iOS\AgoraRtcKit.framework\Headers\AgoraEnumerates.h" />
-     <None Include="Assets\AgoraEngine\Plugins\iOS\AgoraRtcKit.framework\Headers\AgoraOptional.h" />
-     <None Include="Assets\AgoraEngine\Plugins\iOS\AgoraRtcKit.framework\Headers\IAgoraMediaEngine.h" />
-     <None Include="Assets\AgoraEngine\Plugins\iOS\AgoraReplayKitExtension.framework\Headers\AgoraReplayKitExt.h" />
-     <None Include="Assets\AgoraEngine\Plugins\iOS\AgoraRtcKit.framework\Headers\AgoraMediaMetadata.h" />
-     <None Include="Assets\AgoraEngine\Plugins\iOS\AgoraRtcKit.framework\Headers\AgoraConstants.h" />
  <Reference Include="UnityEngine">
  <HintPath>/Applications/2019.4.32f1/Unity.app/Contents/Managed/UnityEngine/UnityEngine.dll</HintPath>
  </Reference>
